# Knowledge_Engineer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  todo.txt
Documentation/Getting Started/: Getting Started.html  Getting Started.md
Documentation/KEPF Language Reference/: KEPF Language Reference.md
Documentation/Release A Version/: Release A Version.md  Setup A Directory for PyPi Packaging.md
Documentation/Why Knowledge Engineer/: Philosophy.md
knowledge_engineer/: AI_API_Costs.py  OpenAI_API_Costs.py  ai.py  create_new_process.py  db.py  ke.py  kestep_editor.py  kestep_editor.tcss  line_statement.py  logger.py  step.py  version.py
test/mistral/: test.py
test/mistral/Planning/: schema.json
test/mistral/Prompts/: 0- Create a Plan.kepf  1- Make Generate Code Prompt.kepf  2- Make Generate Code Prompt (Mistral).kepf  3- List Available Functions.kepf
test/mistral/Requirements/: ApplicationDescription.md
test/rs/Logs/: 1- Create Database Report log.md  2- Create ERD log.md  2- Create Relationship Names log.md  3- Create ERD log.md
test/rs/Planning/: Erd.dot  Schema.json  Schema.md
test/rs/Prompts/: 1- Create Database Report.kepf  2- Create ERD.kepf  2- Create Relationship Names.kepf  3- Create ERD.kepf
test/rs/Requirements/: Erd.dot
test/s99/Logs/: 7- Test SQL Prompt From AI log.md
test/s99/Prompts/: 1- Make Requirements.kepf  2- Make Implementation Plan.kepf  3- Implement Snake Program.kepf  4- Review Implementation.kepf  5- Test Command Execution From Prompt.kepf  6- Test Command Execution From AI.kepf  7- Test SQL Prompt From AI.kepf
test/s99/Requirements/: Actor.kepf  ApplicationDescription.md  OpenAI_API_Costs.py
